@@ -73,12 +73,14 @@ static struct timer_data_t timer_data;
 
 static bool _conn_readable(eio_obj_t *obj);
 static int _server_conn_read(eio_obj_t *obj, List objs);
+static int _abort_conn_close(eio_obj_t *obj, List objs);
 static int _timer_conn_read(eio_obj_t *obj, List objs);
 static int _abort_conn_read(eio_obj_t *obj, List objs);
 
 static struct io_operations abort_ops = {
 	.readable = &_conn_readable,
-	.handle_read = &_abort_conn_read
+	.handle_read = &_abort_conn_read,
+	.handle_close = &_abort_conn_close,
 };
 
 static struct io_operations srv_ops = {
@@ -154,6 +156,12 @@ static int _server_conn_read(eio_obj_t *obj, List objs)
 		}
 	}
 	return 0;
+}
+
+static int _abort_conn_close(eio_obj_t *obj, List objs)
+{
+	close(obj->fd);
+	return SLURM_SUCCESS;
 }
 
 static int _abort_conn_read(eio_obj_t *obj, List objs)
